--- a/desktopStylesheet.css
+++ b/desktopStylesheet.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     font-family: Tahoma, "Trebuchet MS", sans-serif;
     box-sizing: border-box;
+    font-size: calc(15px + 0.390625px);
 }
 
 * {
@@ -157,9 +158,9 @@ p {
 
   /*for mobile version*/
   @media screen and (max-width: 500px) {
-     body {
-         font-size: 16px;
-     }
+    body {
+        font-size:16px;
+    }
     .navbar a {
       float: none;
       display: block;
