--- a/desktopStylesheet.css
+++ b/desktopStylesheet.css
@@ -1,11 +1,12 @@
 /*
 Youngseo Yi
-9/26/23
+9/27/23
 CS20-Web Programming
 HW2: Build a Business Website
 Content: external style sheet for the website
 */
 
+/*Default settings for all content */
 body {
     margin: 0;
     font-family: Tahoma, "Trebuchet MS", sans-serif;
@@ -17,6 +18,7 @@ body {
     box-sizing: inherit;
 }
 
+/*Text or paragraph settings*/
 p {
     text-align: center;
     margin-left: 25%;
@@ -25,6 +27,7 @@ p {
     font-size: 18px;
 }
 
+/*HEADER: includes logo, business name, and contact info*/
 .header{
     margin-right:0;
     display: block;
@@ -34,13 +37,11 @@ p {
     background: #2b2d42;
     text-decoration: none;
 }
-
 .tagline {
     text-align: left;
     font-size: 20px;
     color: #ffffff;
 }
-
 .header a {
     display: inline-block;
     font-size: 20px;
@@ -55,7 +56,7 @@ p {
     color: #ffffff;
 }
 
-/*banner for heading*/
+/*BANNER: navigation bar*/
 .banner {
     width: 100%;
     display: block;
@@ -66,8 +67,7 @@ p {
     color: #ffffff;
     margin: 0px;
 }
-
-
+/*the navbar itself*/
 .navigation {
     display: flex;
     overflow: hidden;
@@ -75,7 +75,7 @@ p {
     background-color: #8d99ae;
     width: 100%;
 }
-
+/*each element, or link, in the navbar*/
 .navigation a {
     float: left;
     color: #2b2d42;
@@ -84,28 +84,26 @@ p {
     text-decoration: none;
     width: 25%;
 }
-
+/*change color of active tab*/
 .navigation .active {
     background-color: #d80032;
 }
-
-
+/*change color when different nav link is hovered*/
 .navigation a:hover  {
     background-color: #ef233c;
     color:#2b2d42;
 }
-
+/*dropdown menu for the About links*/
 .dropdown:hover  {
     background-color: #ef233c;
     color:#2b2d42;
 }
-
-
 .dropdown {
     float: left;
     overflow: hidden;
     width: 25%;
 }
+
 .dropdown a{
     float: left;
     overflow: hidden;
@@ -114,7 +112,7 @@ p {
     text-align: center;
     margin: 0;
 }
-  
+/*About tab*/
 .dropdown .dropbtn {
     font-size: 16px;
     border:none;
@@ -124,18 +122,16 @@ p {
     margin: 0;
     text-align: center;
 }
-
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
+/* Dropdown content: the About the Class and Instructor links */
+.dropdown-content {
     display: none;
     position:absolute;
     background-color: #8d99ae;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+}
+/* Links inside the dropdown */
+.dropdown-content a {
     float: none;
     width: 100%;
     color: #2b2d42;
@@ -143,22 +139,18 @@ p {
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-
-  
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
+}
+/* Add color to dropdown links on hover */
+.dropdown-content a:hover {
     background-color: #ef233c;
-  }
-  
-  /* Show the dropdown menu on hover */
+}
+/* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
-  }
+}
 
 
-  /*for mobile version*/
+/*for mobile version*/
 
 /* Hide checkbox */
 
@@ -263,17 +255,19 @@ p {
         display: flex;
     }
 
+    .navbar a {
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+
  }
 
+/*responsiveness for text and image in About the Instructor page*/
 @media screen and (max-width: 600px) {
     body {
         font-size:16px;
-    }
-    .navbar a {
-      float: none;
-      display: block;
-      width: 100%;
-      text-align: left;
     }
     .row {
         flex-direction:column;
@@ -288,8 +282,16 @@ p {
         padding: 20px;
     }
   }
-
-/*Table Properties*/
+/*responsiveness for text and image in About the Instructor page*/
+@media screen and (max-width: 600px) {
+    .phone {
+        text-align: left;
+    }
+    .header a {
+        text-align: left;
+    }
+}
+/*Table Properties in Resources Page*/
 table {
     margin-left: auto;
     margin-right: auto;
@@ -305,38 +307,35 @@ table {
     background-size:contain;
 
 }
-
+/*Formatting for each cell in the table*/
 th, td {
     width: 20%;
     border: 1px solid black;
     border-collapse: collapse;
 }
-/*700, 800 px/*
 
-/*for About the Instructor*/
-
-  .row {
+/*Formatting for About the Instructor*/
+.row {
     display: flex;
-  }
-  
-  .column {
+}
+.column {
     float:left;
     margin-top: 20px;
-  }
-  .left {
+}
+.left {
     width: 70%;
     text-align: center;
     text-decoration: none;
-  }
-  
-  .right {
+}
+.right {
     width: 50%;
     display: inline-block;
     align-items: center;
-  }
+}
 
-  /*for Contact*/
-  textarea {
+/*Formatting for Contact Us Page (the form)*/
+/*text box for last question*/
+textarea {
     width: 100%;
     height: 150px;
     padding: 12px 20px;
@@ -345,12 +344,10 @@ th, td {
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
-  }
-
-  /*for Form in Contact Us*/
-
+}
+/*the whole form*/
 .form {
-    display: inline-block;
+    display: block;
     margin-left: 25%;
     margin-right: 25%;
     max-width: 600px;
@@ -363,22 +360,14 @@ th, td {
     text-align: center;
     margin-bottom: 20px;
 }
-
+/*form labels*/
 .form label  {
     display: block;
     margin: 10px;
     color:#ffffff;
 }
-
+/*resizing the submit button*/
 input[type="submit"] {
     width: 30%;
     height: 50px;
-}
-
-.bgimage {
-    background-image: url("bgflag.png");
-    opacity: 50%;
-    background-repeat: no-repeat;
-    background-size:contain;
-    background-position: center;
 }
