--- a/desktopStylesheet.css
+++ b/desktopStylesheet.css
@@ -206,9 +206,6 @@ textarea {
 /*the whole form*/
 .form {
     display: block;
-    margin-left: 25%;
-    margin-right: 25%;
-    max-width: 600px;
     text-align: center;
     border:3px solid #2b2d42;
     width: 70%;
@@ -280,6 +277,13 @@ input[type="submit"] {
         padding: 20px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    p {
+        width:100%;
+    }
+}
+
 /*responsiveness for header*/
 @media screen and (max-width: 600px) {
     .phone {
