--- a/desktopStylesheet.css
+++ b/desktopStylesheet.css
@@ -281,6 +281,8 @@ input[type="submit"] {
 @media screen and (max-width: 600px) {
     p {
         width:100%;
+        padding: 10%;
+        margin: 0;
     }
 }
 
